...
    </View>
  );

  return (
    <View style={globalStyles.screenContainer}>
      <FlatList
        testID="library-episode-list"
        data={episodes}
        renderItem={renderItem}
        keyExtractor={keyExtractor}
        ListHeaderComponent={listHeader}
        contentContainerStyle={
          episodes.length === 0 ? styles.emptyListContainer : styles.listContent
...
